different versioning structure, vendored, compied over storage and sender
